Fix spacing on smaller width screens

--- a/tapjoyads/app/assets/stylesheets/api/style.scss
+++ b/tapjoyads/app/assets/stylesheets/api/style.scss
@@ -419,7 +419,7 @@ span.small {
   margin-top: 5px;
 }
 
-@media (max-width:360px){
+@media (max-width:425px){
   .button {
     font-size: 110%;
   }
@@ -433,7 +433,7 @@ span.small {
 
         .about {
           font-size: 80%;
-          margin-left: 80px;
+          margin-left: 10px;
           width: 59%;
 
           .action {
